# house_prices_regression_techniques

./: Makefile  README.md  pyproject.toml
data/processed/: submission.csv
docs/: mkdocs.yml
models/: xgb_model.pkl
notebooks/: HousePrices.ipynb
