[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "house_prices_regression_techniques"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mohamed Mohsen" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.4.14"


[tool.ruff]
line-length = 99
src = ["house_prices_regression_techniques"]
include = ["pyproject.toml", "house_prices_regression_techniques/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["house_prices_regression_techniques"]
force-sort-within-sections = true

